:lipstick: Remove bottom border and correct alignment in Header

--- a/client/src/components/base/Header/Menu/Menu.scss
+++ b/client/src/components/base/Header/Menu/Menu.scss
@@ -27,6 +27,5 @@
 }
 
 .menu--list li {
-  border-bottom: 1px solid #444;
   padding: 1rem;
 }
